Fix picture stretch issue in PlaneInfo.js

--- a/src/css/plane-info.css
+++ b/src/css/plane-info.css
@@ -34,6 +34,7 @@
     width: 80%;
     max-width: 450px;
     height: auto;
+    object-fit: scale-down;
 }
 
 /* Plane data */
